fix: fix body background and overflow behaviour

--- a/todo/src/index.css
+++ b/todo/src/index.css
@@ -6,4 +6,6 @@ body {
   margin: 0;
   min-width: 100dvw;
   min-height: 100dvh;
+  background: #132C13;
+  overflow: hidden;
 }
